--- a/CarND-Advanced-Lane-Lines.ipynb
+++ b/CarND-Advanced-Lane-Lines.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Advanced Lane Finding Project\n",
     "\n",
@@ -23,7 +26,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -41,7 +46,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Compute the camera calibration points using chessboard images"
    ]
@@ -51,6 +59,8 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "scrolled": true
    },
    "outputs": [],
@@ -98,7 +108,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Distortion correction"
    ]
@@ -113,22 +126,53 @@
    "source": [
     "import pickle\n",
     "\n",
+    "def pickle_dump(mtx, dist):\n",
+    "    # Save the camera calibration result for later use (we won't worry about rvecs / tvecs)\n",
+    "    dist_pickle = {}\n",
+    "    dist_pickle[\"mtx\"] = mtx\n",
+    "    dist_pickle[\"dist\"] = dist\n",
+    "    pickle.dump(dist_pickle, open('wide_dist_pickle.p', 'wb'))\n",
+    "    \n",
+    "def pickle_load():\n",
+    "    # Getting back the camera calibration result:\n",
+    "    with open('wide_dist_pickle.p', 'rb') as f:\n",
+    "        dist_pickle = pickle.load(f)\n",
+    "        return dist_pickle['mtx'], dist_pickle['dist']\n",
+    "    \n",
+    "def calibrate_camera(img):\n",
+    "    img_size = (img.shape[1], img.shape[0])\n",
+    "    \n",
+    "    # Do camera calibration given object points and image points\n",
+    "    objpoints, imgpoints = get_3d2d_points(do_plot=False, do_file=False)\n",
+    "    ret, mtx, dist, rvecs, tvecs = cv2.calibrateCamera(objpoints, imgpoints, img_size, None, None)\n",
+    "\n",
+    "    # Save the camera calibration result\n",
+    "    pickle_dump(mtx, dist)\n",
+    "    return mtx, dist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
     "# Test undistortion on the image\n",
     "img = cv2.imread('camera_cal/calibration1.jpg')\n",
-    "img_size = (img.shape[1], img.shape[0])\n",
     "\n",
-    "# Do camera calibration given object points and image points\n",
-    "objpoints, imgpoints = get_3d2d_points(do_plot=False, do_file=False)\n",
-    "ret, mtx, dist, rvecs, tvecs = cv2.calibrateCamera(objpoints, imgpoints, img_size, None, None)\n",
+    "# Calibrate camera and save data to pickle\n",
+    "#mtx, dist = calibrate_camera(img)\n",
     "\n",
+    "# Load calibration data from pickle\n",
+    "mtx, dist = pickle_load()\n",
+    "\n",
+    "# Undistort image\n",
     "dst = cv2.undistort(img, mtx, dist, None, mtx)\n",
-    "#cv2.imwrite('test_undist.jpg', dst)\n",
-    "\n",
-    "# Save the camera calibration result for later use (we won't worry about rvecs / tvecs)\n",
-    "dist_pickle = {}\n",
-    "dist_pickle[\"mtx\"] = mtx\n",
-    "dist_pickle[\"dist\"] = dist\n",
-    "pickle.dump(dist_pickle, open('wide_dist_pickle.p', 'wb'))\n",
+    "# cv2.imwrite('test_undist.jpg', dst)\n",
     "\n",
     "# Visualize undistortion\n",
     "f, (ax1, ax2) = plt.subplots(1, 2, figsize=(10, 5))\n",
@@ -140,7 +184,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Color/gradient threshold"
    ]
@@ -149,14 +196,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Perspective transform"
    ]
@@ -165,14 +217,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Detect lane lines"
    ]
@@ -181,14 +238,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Determine the lane curvature"
    ]
@@ -197,7 +259,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
