--- a/CarND-Advanced-Lane-Lines.ipynb
+++ b/CarND-Advanced-Lane-Lines.ipynb
@@ -189,7 +189,11 @@
     "editable": true
    },
    "source": [
-    "## Color/gradient threshold"
+    "## Color/gradient threshold\n",
+    "\n",
+    "Combine color and gradient thresholds to generate a binary image where the lane lines are clearly visible.\n",
+    "\n",
+    "Output should be an array of the same size as the input image. The output array elements should be 1 where gradients were in the threshold range, and 0 everywhere else."
    ]
   },
   {
@@ -199,6 +203,183 @@
     "collapsed": true,
     "deletable": true,
     "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import cv2\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.image as mpimg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def plot_row2(img1, img2, label_1, label_2):\n",
+    "    # Plot the result (1 row with 2 images)\n",
+    "    f, (ax1, ax2) = plt.subplots(1, 2, figsize=(18, 6))\n",
+    "    f.tight_layout()\n",
+    "    ax1.imshow(img1)\n",
+    "    ax1.set_title(label_1, fontsize=16)\n",
+    "    ax2.imshow(img2, cmap='gray')\n",
+    "    ax2.set_title(label_2, fontsize=16)\n",
+    "    plt.subplots_adjust(left=0., right=1, top=0.9, bottom=0.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Apply Sobel (Calculate directional gradient and Apply threshold)\n",
+    "def abs_sobel_thresh(img, orient='x', sobel_kernel=3, thresh=(0, 255)):\n",
+    "    # Convert to grayscale\n",
+    "    #img_gray = cv2.cvtColor(img, cv2.COLOR_RGB2GRAY)\n",
+    "    img_gray = cv2.cvtColor(img, cv2.COLOR_RGB2HLS)\n",
+    "    img_gray = img_gray[:,:,2]\n",
+    "    \n",
+    "    # Take the derivative in x or y given orient = 'x' or 'y'\n",
+    "    if orient == 'x':\n",
+    "        sobel = cv2.Sobel(img_gray, cv2.CV_64F, 1, 0, ksize=sobel_kernel)\n",
+    "    elif orient == 'y':\n",
+    "        sobel = cv2.Sobel(img_gray, cv2.CV_64F, 0, 1, ksize=sobel_kernel) \n",
+    "    # Take the absolute value of the derivative or gradient\n",
+    "    abs_sobel = np.absolute(sobel)\n",
+    "    # Scale to 8-bit (0 - 255) then convert to type = np.uint8\n",
+    "    scaled_sobel = np.uint8(255 * abs_sobel / np.max(abs_sobel))\n",
+    "    # Create a mask of 1's where the scaled gradient magnitude \n",
+    "    # is > thresh_min and < thresh_max\n",
+    "    binary_output = np.zeros_like(scaled_sobel)\n",
+    "    binary_output[(scaled_sobel >= thresh[0]) & (scaled_sobel <= thresh[1])] = 1\n",
+    "    # Return mask as binary_output image\n",
+    "    return binary_output\n",
+    "\n",
+    "\n",
+    "# Calculate gradient magnitude and Apply threshold\n",
+    "# Return the magnitude of the gradient for a given sobel kernel \n",
+    "# size and threshold values in both x and y\n",
+    "def mag_thresh(img, sobel_kernel=3, mag_thresh=(0, 255)):\n",
+    "    # Convert to grayscale\n",
+    "    # img_gray = cv2.cvtColor(img, cv2.COLOR_RGB2GRAY)\n",
+    "    img_gray = cv2.cvtColor(img, cv2.COLOR_RGB2HLS)\n",
+    "    img_gray = img_gray[:,:,2]\n",
+    "    \n",
+    "    # Take the gradient in x and y separately\n",
+    "    sobel_x = cv2.Sobel(img_gray, cv2.CV_64F, 1, 0, ksize=sobel_kernel)\n",
+    "    sobel_y = cv2.Sobel(img_gray, cv2.CV_64F, 0, 1, ksize=sobel_kernel)\n",
+    "    # Calculate the gradient magnitude\n",
+    "    gradmag = np.sqrt(sobel_x**2 + sobel_y**2)\n",
+    "    # Rescale to 8 bit\n",
+    "    scale_factor = np.max(gradmag)/255 \n",
+    "    gradmag = (gradmag/scale_factor).astype(np.uint8)\n",
+    "    # Create a binary mask where mag thresholds are met\n",
+    "    binary_output = np.zeros_like(gradmag)\n",
+    "    binary_output[(gradmag >= mag_thresh[0]) & (gradmag <= mag_thresh[1])] = 1\n",
+    "    # Return mask as binary_output image\n",
+    "    return binary_output\n",
+    "\n",
+    "\n",
+    "# Calculate gradient direction and Apply threshold\n",
+    "# Compute the direction of the gradient and apply a threshold\n",
+    "def dir_threshold(img, sobel_kernel=3, thresh=(0, np.pi/2)):\n",
+    "    # Convert to grayscale\n",
+    "    #img_gray = cv2.cvtColor(img, cv2.COLOR_RGB2GRAY)\n",
+    "    img_gray = cv2.cvtColor(img, cv2.COLOR_RGB2HLS)\n",
+    "    img_gray = img_gray[:,:,2]\n",
+    "    \n",
+    "    # Take the gradient in x and y separately\n",
+    "    sobel_x = cv2.Sobel(img_gray, cv2.CV_64F, 1, 0, ksize=sobel_kernel)\n",
+    "    sobel_y = cv2.Sobel(img_gray, cv2.CV_64F, 0, 1, ksize=sobel_kernel)\n",
+    "    # Take the absolute value of the x and y gradients\n",
+    "    abs_sobel_x = np.absolute(sobel_x)\n",
+    "    abs_sobel_y = np.absolute(sobel_y)\n",
+    "    # Use np.arctan2(abs_sobel_y, abs_sobel_x) to calculate the direction of the gradient\n",
+    "    absgraddir = np.arctan2(abs_sobel_y, abs_sobel_x)\n",
+    "    # Create a binary mask where direction thresholds are met\n",
+    "    binary_output = np.zeros_like(absgraddir)\n",
+    "    binary_output[(absgraddir >= thresh[0]) & (absgraddir <= thresh[1])] = 1\n",
+    "    # Return this mask as binary_output image\n",
+    "    return binary_output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def combine_thresholds(image, do_plot=False):\n",
+    "    # Undistort image\n",
+    "    img = cv2.undistort(image, mtx, dist, None, mtx)\n",
+    "    # Sobel kernel size (choose a larger odd number to smooth gradient measurements)\n",
+    "    ksize = 11\n",
+    "    \n",
+    "    # Apply Sobel on x-axis\n",
+    "    grad_x_binary = abs_sobel_thresh(img, orient='x', sobel_kernel=ksize, thresh=(20, 120))\n",
+    "    # Apply Sobel on y-axis\n",
+    "    grad_y_binary = abs_sobel_thresh(img, orient='y', sobel_kernel=ksize, thresh=(20, 120))\n",
+    "    # Apply Sobel x and y, compute the magnitude of the gradient and apply a threshold\n",
+    "    mag_binary = mag_thresh(img, sobel_kernel=ksize, mag_thresh=(30, 120))\n",
+    "    # Apply Sobel x and y, computes the direction of the gradient and apply a threshold\n",
+    "    dir_binary = dir_threshold(image, sobel_kernel=ksize, thresh=(0.7, 1.3))\n",
+    "    \n",
+    "    # Combine the thresholds\n",
+    "    combined = np.zeros_like(dir_binary)\n",
+    "    #combined[((grad_x_binary == 1) & (grad_y_binary == 1)) | ((mag_binary == 1) & (dir_binary == 1))] = 1\n",
+    "    combined[((grad_x_binary == 1)) | ((mag_binary == 1) & (dir_binary == 1))] = 1\n",
+    "    \n",
+    "    if do_plot:\n",
+    "        plot_row2(image, grad_x_binary, 'Original Image', 'Sobel on x-axis')\n",
+    "        plot_row2(image, grad_y_binary, 'Original Image', 'Sobel on y-axis')\n",
+    "        plot_row2(image, mag_binary,    'Original Image', 'Thresholded Magnitude')\n",
+    "        plot_row2(image, dir_binary,    'Original Image', 'Thresholded Gradient Direction')\n",
+    "        plot_row2(image, combined,      'Original Image', 'Combined Thresholds')\n",
+    "        \n",
+    "    return combined"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Load original image from camera\n",
+    "image = mpimg.imread('test_images/test6.jpg')\n",
+    "#image = mpimg.imread('test_images/straight_lines1.jpg')\n",
+    "\n",
+    "# Perform Sobel operations and combine thresholds\n",
+    "comb_threshold = combine_thresholds(image, do_plot=False)\n",
+    "\n",
+    "plt.imshow(comb_threshold, cmap='gray')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
    },
    "outputs": [],
    "source": []
