Combine color and gradient thresholds

--- a/CarND-Advanced-Lane-Lines.ipynb
+++ b/CarND-Advanced-Lane-Lines.ipynb
@@ -220,11 +220,14 @@
    },
    "outputs": [],
    "source": [
-    "def plot_row2(img1, img2, label_1, label_2):\n",
+    "def plot_row2(img1, img2, label_1, label_2, graysc=True):\n",
     "    # Plot the result (1 row with 2 images)\n",
     "    f, (ax1, ax2) = plt.subplots(1, 2, figsize=(18, 6))\n",
     "    f.tight_layout()\n",
-    "    ax1.imshow(img1)\n",
+    "    if graysc:\n",
+    "        ax1.imshow(img1, cmap='gray')\n",
+    "    else:\n",
+    "        ax1.imshow(img1)\n",
     "    ax1.set_title(label_1, fontsize=16)\n",
     "    ax2.imshow(img2, cmap='gray')\n",
     "    ax2.set_title(label_2, fontsize=16)\n",
@@ -318,12 +321,9 @@
    },
    "outputs": [],
    "source": [
-    "def combine_thresholds(image, do_plot=False):\n",
-    "    # Undistort image\n",
-    "    img = cv2.undistort(image, mtx, dist, None, mtx)\n",
+    "def combine_sobel_thresholds(img, do_plot=False):\n",
     "    # Sobel kernel size (choose a larger odd number to smooth gradient measurements)\n",
     "    ksize = 11\n",
-    "    \n",
     "    # Apply Sobel on x-axis\n",
     "    grad_x_binary = abs_sobel_thresh(img, orient='x', sobel_kernel=ksize, thresh=(20, 120))\n",
     "    # Apply Sobel on y-axis\n",
@@ -356,24 +356,60 @@
    },
    "outputs": [],
    "source": [
-    "# Load original image from camera\n",
-    "image = mpimg.imread('test_images/test6.jpg')\n",
-    "#image = mpimg.imread('test_images/straight_lines1.jpg')\n",
-    "\n",
-    "# Perform Sobel operations and combine thresholds\n",
-    "comb_threshold = combine_thresholds(image, do_plot=False)\n",
-    "\n",
-    "plt.imshow(comb_threshold, cmap='gray')"
+    "def color_channel_threshold(img, thresh=(0, 255), do_plot=False):\n",
+    "    # Convert to HLS color space and separate the S channel\n",
+    "    hls = cv2.cvtColor(img, cv2.COLOR_RGB2HLS)\n",
+    "    \n",
+    "    # Extract S channel\n",
+    "    s_channel = hls[:,:,2]\n",
+    "    s_binary = np.zeros_like(s_channel)\n",
+    "    s_binary[(s_channel >= thresh[0]) & (s_channel <= thresh[1])] = 1\n",
+    "    \n",
+    "    # Extract L channel\n",
+    "    l_channel = hls[:,:,1]\n",
+    "    l_binary = np.zeros_like(l_channel)\n",
+    "    l_binary[(l_channel >= thresh[0]) & (l_channel <= thresh[1])] = 1\n",
+    "    \n",
+    "    # Combine S and L channels\n",
+    "    combined = np.zeros_like(l_binary)\n",
+    "    combined[((s_binary == 1) & (l_binary == 1))] = 1\n",
+    "    \n",
+    "    if do_plot:\n",
+    "        plot_row2(image, s_binary, 'Original Image', 'S threshold')\n",
+    "        plot_row2(image, l_binary, 'Original Image', 'L threshold')\n",
+    "        plot_row2(image, combined, 'Original Image', 'S and L threshold')\n",
+    "        \n",
+    "    return combined"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Load original image from camera\n",
+    "image = mpimg.imread('test_images/test1.jpg')\n",
+    "#image = mpimg.imread('test_images/straight_lines2.jpg')\n",
+    "# Undistort image\n",
+    "image = cv2.undistort(image, mtx, dist, None, mtx)\n",
+    "\n",
+    "# Perform Sobel operations and combine thresholds\n",
+    "combine_sobel = combine_sobel_thresholds(image, do_plot=False)\n",
+    "\n",
+    "# Threshold color channel\n",
+    "color_thresh = color_channel_threshold(image, thresh=(110, 255), do_plot=False)\n",
+    "\n",
+    "# Combine color and gradient thresholds\n",
+    "combined_binary = np.zeros_like(color_thresh)\n",
+    "combined_binary[(combine_sobel == 1) | (color_thresh == 1)] = 1\n",
+    "\n",
+    "# Plot results\n",
+    "plot_row2(combine_sobel, color_thresh, 'Combined Sobel operations', 'S and L threshold', graysc=True)\n",
+    "plot_row2(image, combined_binary, 'Original Image (Undistorted)', 'Final Thresholded Image')"
+   ]
   },
   {
    "cell_type": "code",
