Add perspective correction and line detection

--- a/CarND-Advanced-Lane-Lines.ipynb
+++ b/CarND-Advanced-Lane-Lines.ipynb
@@ -36,6 +36,7 @@
     "import cv2                         # openCV\n",
     "import glob                        # Filename pattern matching\n",
     "import matplotlib.pyplot as plt    # 2D plotting\n",
+    "import matplotlib.image as mpimg\n",
     "\n",
     "# Interactive plotting in separate window\n",
     "#%matplotlib qt\n",
@@ -120,7 +121,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -152,37 +155,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "# Test undistortion on the image\n",
-    "img = cv2.imread('camera_cal/calibration1.jpg')\n",
-    "\n",
-    "# Calibrate camera and save data to pickle\n",
-    "#mtx, dist = calibrate_camera(img)\n",
-    "\n",
-    "# Load calibration data from pickle\n",
-    "mtx, dist = pickle_load()\n",
-    "\n",
-    "# Undistort image\n",
-    "dst = cv2.undistort(img, mtx, dist, None, mtx)\n",
-    "# cv2.imwrite('test_undist.jpg', dst)\n",
-    "\n",
-    "# Visualize undistortion\n",
-    "f, (ax1, ax2) = plt.subplots(1, 2, figsize=(10, 5))\n",
-    "ax1.imshow(img)\n",
-    "ax1.set_title('Original Image', fontsize=14)\n",
-    "ax2.imshow(dst)\n",
-    "ax2.set_title('Undistorted Image', fontsize=14)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "deletable": true,
@@ -206,20 +178,7 @@
    },
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import cv2\n",
-    "import matplotlib.pyplot as plt\n",
-    "import matplotlib.image as mpimg"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "# For universal plotting of results\n",
     "def plot_row2(img1, img2, label_1, label_2, graysc=True):\n",
     "    # Plot the result (1 row with 2 images)\n",
     "    f, (ax1, ax2) = plt.subplots(1, 2, figsize=(18, 6))\n",
@@ -238,7 +197,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -317,7 +278,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -352,7 +315,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -383,51 +348,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# Load original image from camera\n",
-    "image = mpimg.imread('test_images/test1.jpg')\n",
-    "#image = mpimg.imread('test_images/straight_lines2.jpg')\n",
-    "# Undistort image\n",
-    "image = cv2.undistort(image, mtx, dist, None, mtx)\n",
-    "\n",
-    "# Perform Sobel operations and combine thresholds\n",
-    "combine_sobel = combine_sobel_thresholds(image, do_plot=False)\n",
-    "\n",
-    "# Threshold color channel\n",
-    "color_thresh = color_channel_threshold(image, thresh=(110, 255), do_plot=False)\n",
-    "\n",
-    "# Combine color and gradient thresholds\n",
-    "combined_binary = np.zeros_like(color_thresh)\n",
-    "combined_binary[(combine_sobel == 1) | (color_thresh == 1)] = 1\n",
-    "\n",
-    "# Plot results\n",
-    "plot_row2(combine_sobel, color_thresh, 'Combined Sobel operations', 'S and L threshold', graysc=True)\n",
-    "plot_row2(image, combined_binary, 'Original Image (Undistorted)', 'Final Thresholded Image')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "deletable": true,
     "editable": true
    },
    "source": [
-    "## Perspective transform"
+    "## Perspective transform\n",
+    "\n",
+    "Pick four points in a trapezoidal shape (similar to region masking) that would represent a rectangle when looking down on the road from above.\n",
+    "\n",
+    "The easiest way to do this is to investigate an image where the lane lines are straight, and find four points lying along the lines that, after perspective transform, make the lines look straight and vertical from a bird's eye view perspective."
    ]
   },
   {
@@ -439,7 +370,38 @@
     "editable": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Applies an image mask.\n",
+    "# Only keeps the region of the image defined by the polygon\n",
+    "# formed from `vertices`. The rest of the image is set to black.\n",
+    "def region_of_interest(img, vertices):\n",
+    "    # Defining a blank mask to start with\n",
+    "    mask = np.zeros_like(img)   \n",
+    "    ignore_mask_color = 255\n",
+    "    # Fill pixels inside the polygon defined by \"vertices\" with the fill color    \n",
+    "    cv2.fillPoly(mask, vertices, ignore_mask_color)\n",
+    "    # Return the image only where mask pixels are nonzero\n",
+    "    masked_image = cv2.bitwise_and(img, mask)\n",
+    "    return masked_image\n",
+    "\n",
+    "def perspective_transform(img):\n",
+    "    # Define 4 source points\n",
+    "    src = np.float32([[200, img.shape[0]], \n",
+    "                      [560, 470], \n",
+    "                      [720, 470], \n",
+    "                      [1115, img.shape[0]]])\n",
+    "    # Define 4 destination points\n",
+    "    dst = np.float32([[320, img.shape[0]], \n",
+    "                      [320, 0], \n",
+    "                      [960, 0], \n",
+    "                      [960, img.shape[0]]])\n",
+    "    # Use cv2.getPerspectiveTransform() to get M, the transform matrix\n",
+    "    M = cv2.getPerspectiveTransform(src, dst)\n",
+    "    # Use cv2.warpPerspective() to warp image to a top-down view\n",
+    "    img_size = (img.shape[1], img.shape[0])\n",
+    "    warped = cv2.warpPerspective(img, M, img_size, flags=cv2.INTER_LINEAR)\n",
+    "    return warped"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -448,7 +410,9 @@
     "editable": true
    },
    "source": [
-    "## Detect lane lines"
+    "## Detect lane lines\n",
+    "\n",
+    "Decide explicitly which pixels are part of the lines and which belong to the left line and which belong to the right line."
    ]
   },
   {
@@ -479,6 +443,225 @@
     "collapsed": true,
     "deletable": true,
     "editable": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Project Pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "######################################################\n",
+    "# STEP 1: CAMERA CALIBRATION AND IMAGE UNDISTORTION\n",
+    "######################################################\n",
+    "# Test undistortion on the image\n",
+    "img = cv2.imread('camera_cal/calibration1.jpg')\n",
+    "\n",
+    "# Calibrate camera and save data to pickle\n",
+    "mtx, dist = calibrate_camera(img)\n",
+    "# Load calibration data from pickle\n",
+    "#mtx, dist = pickle_load()\n",
+    "\n",
+    "# Undistort image\n",
+    "dst = cv2.undistort(img, mtx, dist, None, mtx)\n",
+    "# cv2.imwrite('test_undist.jpg', dst)\n",
+    "\n",
+    "# Visualize undistortion\n",
+    "plot_row2(img, dst, 'Original Image', 'Undistorted Image')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "######################################################\n",
+    "# STEP 2: COLOR / GRADIENT THRESHOLD\n",
+    "######################################################\n",
+    "# Load original image from camera\n",
+    "image = mpimg.imread('test_images/test2.jpg')\n",
+    "#image = mpimg.imread('test_images/straight_lines2.jpg')\n",
+    "# Undistort image\n",
+    "undist_image = cv2.undistort(image, mtx, dist, None, mtx)\n",
+    "\n",
+    "# Perform Sobel operations and combine thresholds\n",
+    "combine_sobel = combine_sobel_thresholds(undist_image, do_plot=False)\n",
+    "\n",
+    "# Threshold color channel\n",
+    "color_thresh = color_channel_threshold(undist_image, thresh=(110, 255), do_plot=False)\n",
+    "\n",
+    "# Combine color and gradient thresholds\n",
+    "combined_binary = np.zeros_like(color_thresh)\n",
+    "combined_binary[(combine_sobel == 1) | (color_thresh == 1)] = 1\n",
+    "\n",
+    "# Plot results\n",
+    "#plot_row2(combine_sobel, color_thresh, 'Combined Sobel operations', 'S and L threshold', graysc=True)\n",
+    "#plot_row2(undist_image, combined_binary, 'Original Image (Undistorted)', 'Final Thresholded Image')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "######################################################\n",
+    "# STEP 3: PERSPECTIVE TRANSFORM\n",
+    "######################################################\n",
+    "# Plot borders (for experiments)\n",
+    "#plt.imshow(image)\n",
+    "#plt.plot((200, 560), (image.shape[0], 470), 'k-', color='red', linewidth=1)\n",
+    "#plt.plot((720, 1115), (470, image.shape[0]), 'k-', color='red', linewidth=1)\n",
+    "warped_img = perspective_transform(combined_binary)\n",
+    "#plot_row2(combined_binary, warped_img, 'Combined binary image', 'Warped image')\n",
+    "\n",
+    "# Define image mask (polygon of interest)\n",
+    "imshape = warped_img.shape\n",
+    "vertices = np.array([[(170, imshape[0]), \n",
+    "                      (170, 0), \n",
+    "                      (imshape[1] - 170, 0), \n",
+    "                      (imshape[1]-170, imshape[0])]], dtype=np.int32)\n",
+    "masked_img = region_of_interest(warped_img, vertices)\n",
+    "\n",
+    "plot_row2(warped_img, masked_img, 'Warped image', 'Warped image with mask')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "######################################################\n",
+    "# STEP 4: DETECT LANE LINES\n",
+    "######################################################\n",
+    "\n",
+    "# Take a histogram of the bottom half of the image\n",
+    "histogram = np.sum(masked_img[masked_img.shape[0]//2:,:], axis=0)\n",
+    "#plt.plot(histogram)\n",
+    "# Create an output image to draw on and  visualize the result\n",
+    "out_img = np.dstack((masked_img, masked_img, masked_img))*255\n",
+    "\n",
+    "# Find the peak of the left and right halves of the histogram\n",
+    "# These will be the starting point for the left and right lines\n",
+    "midpoint = np.int(histogram.shape[0]/2)\n",
+    "leftx_base = np.argmax(histogram[:midpoint])\n",
+    "rightx_base = np.argmax(histogram[midpoint:]) + midpoint\n",
+    "\n",
+    "# The number of sliding windows\n",
+    "nwindows = 9\n",
+    "# Set height of windows\n",
+    "window_height = np.int(masked_img.shape[0]/nwindows)\n",
+    "# Identify the x and y positions of all nonzero pixels in the image\n",
+    "nonzero = masked_img.nonzero()\n",
+    "nonzeroy = np.array(nonzero[0])\n",
+    "nonzerox = np.array(nonzero[1])\n",
+    "\n",
+    "# Current positions to be updated for each window\n",
+    "leftx_current = leftx_base\n",
+    "rightx_current = rightx_base\n",
+    "\n",
+    "# Set the width of the windows +/- margin\n",
+    "margin = 100\n",
+    "# Set minimum number of pixels found to recenter window\n",
+    "minpix = 50\n",
+    "\n",
+    "# Create empty lists to receive left and right lane pixel indices\n",
+    "left_lane_inds = []\n",
+    "right_lane_inds = []\n",
+    "\n",
+    "# Step through the windows one by one\n",
+    "for window in range(nwindows):\n",
+    "    # Identify window boundaries in x and y (and right and left)\n",
+    "    win_y_low = masked_img.shape[0] - (window+1)*window_height\n",
+    "    win_y_high = masked_img.shape[0] - window*window_height\n",
+    "    win_xleft_low = leftx_current - margin\n",
+    "    win_xleft_high = leftx_current + margin\n",
+    "    win_xright_low = rightx_current - margin\n",
+    "    win_xright_high = rightx_current + margin\n",
+    "    \n",
+    "    # Draw the windows on the visualization image\n",
+    "    cv2.rectangle(out_img, (win_xleft_low,win_y_low), (win_xleft_high,win_y_high), (0,255,0), 2) \n",
+    "    cv2.rectangle(out_img, (win_xright_low,win_y_low), (win_xright_high,win_y_high), (0,255,0), 2)\n",
+    "    \n",
+    "     # Identify the nonzero pixels in x and y within the window\n",
+    "    good_left_inds = ((nonzeroy >= win_y_low) & (nonzeroy < win_y_high) & \n",
+    "                      (nonzerox >= win_xleft_low) & (nonzerox < win_xleft_high)).nonzero()[0]\n",
+    "    good_right_inds = ((nonzeroy >= win_y_low) & (nonzeroy < win_y_high) & \n",
+    "                       (nonzerox >= win_xright_low) & (nonzerox < win_xright_high)).nonzero()[0]\n",
+    "    \n",
+    "    # Append these indices to the lists\n",
+    "    left_lane_inds.append(good_left_inds)\n",
+    "    right_lane_inds.append(good_right_inds)\n",
+    "    \n",
+    "    # If founded > minpix pixels, recenter next window on their mean position\n",
+    "    if len(good_left_inds) > minpix:\n",
+    "        leftx_current = np.int(np.mean(nonzerox[good_left_inds]))\n",
+    "    if len(good_right_inds) > minpix:        \n",
+    "        rightx_current = np.int(np.mean(nonzerox[good_right_inds]))\n",
+    "        \n",
+    "# Concatenate the arrays of indices\n",
+    "left_lane_inds = np.concatenate(left_lane_inds)\n",
+    "right_lane_inds = np.concatenate(right_lane_inds)\n",
+    "\n",
+    "# Extract left and right line pixel positions\n",
+    "leftx = nonzerox[left_lane_inds]\n",
+    "lefty = nonzeroy[left_lane_inds] \n",
+    "rightx = nonzerox[right_lane_inds]\n",
+    "righty = nonzeroy[right_lane_inds] \n",
+    "\n",
+    "# Fit a second order polynomial to each\n",
+    "left_fit = np.polyfit(lefty, leftx, 2)\n",
+    "right_fit = np.polyfit(righty, rightx, 2)\n",
+    "\n",
+    "\n",
+    "# Generate x and y values for plotting\n",
+    "ploty = np.linspace(0, masked_img.shape[0]-1, masked_img.shape[0])\n",
+    "left_fitx = left_fit[0]*ploty**2 + left_fit[1]*ploty + left_fit[2]\n",
+    "right_fitx = right_fit[0]*ploty**2 + right_fit[1]*ploty + right_fit[2]\n",
+    "\n",
+    "out_img[nonzeroy[left_lane_inds], nonzerox[left_lane_inds]] = [255, 0, 0]\n",
+    "out_img[nonzeroy[right_lane_inds], nonzerox[right_lane_inds]] = [0, 0, 255]\n",
+    "fig = plt.figure(figsize=(18, 6))\n",
+    "plt.imshow(out_img)\n",
+    "plt.plot(left_fitx, ploty, color='yellow')\n",
+    "plt.plot(right_fitx, ploty, color='yellow')\n",
+    "plt.xlim(0, 1280)\n",
+    "plt.ylim(720, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
    },
    "outputs": [],
    "source": []
