--- a/CarND-Advanced-Lane-Lines.ipynb
+++ b/CarND-Advanced-Lane-Lines.ipynb
@@ -144,7 +144,7 @@
     "    \n",
     "def calibrate_camera(img):\n",
     "    img_size = (img.shape[1], img.shape[0])\n",
-    "    \n",
+    "\n",
     "    # Do camera calibration given object points and image points\n",
     "    objpoints, imgpoints = get_3d2d_points(do_plot=False, do_file=False)\n",
     "    ret, mtx, dist, rvecs, tvecs = cv2.calibrateCamera(objpoints, imgpoints, img_size, None, None)\n",
@@ -286,7 +286,7 @@
    "source": [
     "def combine_sobel_thresholds(img, do_plot=False):\n",
     "    # Sobel kernel size (choose a larger odd number to smooth gradient measurements)\n",
-    "    ksize = 11\n",
+    "    ksize = 9\n",
     "    # Apply Sobel on x-axis\n",
     "    grad_x_binary = abs_sobel_thresh(img, orient='x', sobel_kernel=ksize, thresh=(20, 120))\n",
     "    # Apply Sobel on y-axis\n",
@@ -384,19 +384,19 @@
     "    masked_image = cv2.bitwise_and(img, mask)\n",
     "    return masked_image\n",
     "\n",
-    "def perspective_transform(img):\n",
+    "def perspective_transform(img, inv=False):\n",
     "    # Define 4 source points\n",
-    "    src = np.float32([[200, img.shape[0]], \n",
-    "                      [560, 470], \n",
-    "                      [720, 470], \n",
-    "                      [1115, img.shape[0]]])\n",
+    "    src = np.float32([[180, img.shape[0]], [575, 460], \n",
+    "                      [705, 460], [1150, img.shape[0]]])\n",
     "    # Define 4 destination points\n",
-    "    dst = np.float32([[320, img.shape[0]], \n",
-    "                      [320, 0], \n",
-    "                      [960, 0], \n",
-    "                      [960, img.shape[0]]])\n",
+    "    #-40 = 280, +40 = 1000\n",
+    "    dst = np.float32([[320, img.shape[0]], [320, 0], \n",
+    "                      [960, 0], [960, img.shape[0]]])\n",
     "    # Use cv2.getPerspectiveTransform() to get M, the transform matrix\n",
-    "    M = cv2.getPerspectiveTransform(src, dst)\n",
+    "    if inv == False:\n",
+    "        M = cv2.getPerspectiveTransform(src, dst)\n",
+    "    else:\n",
+    "        M = cv2.getPerspectiveTransform(dst, src)\n",
     "    # Use cv2.warpPerspective() to warp image to a top-down view\n",
     "    img_size = (img.shape[1], img.shape[0])\n",
     "    warped = cv2.warpPerspective(img, M, img_size, flags=cv2.INTER_LINEAR)\n",
@@ -433,7 +433,11 @@
     "editable": true
    },
    "source": [
-    "## Determine the lane curvature"
+    "## Determine the lane curvature\n",
+    "\n",
+    "Now we have a thresholded image, where estimated which pixels belong to the left and right lane lines, and we've fit a polynomial to those pixel positions. \n",
+    "\n",
+    "Next we'll compute the radius of curvature of the fit."
    ]
   },
   {
@@ -449,7 +453,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Project Pipeline"
    ]
@@ -458,7 +465,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -469,23 +478,25 @@
     "img = cv2.imread('camera_cal/calibration1.jpg')\n",
     "\n",
     "# Calibrate camera and save data to pickle\n",
-    "mtx, dist = calibrate_camera(img)\n",
+    "#mtx, dist = calibrate_camera(img)\n",
     "# Load calibration data from pickle\n",
-    "#mtx, dist = pickle_load()\n",
+    "mtx, dist = pickle_load()\n",
     "\n",
     "# Undistort image\n",
     "dst = cv2.undistort(img, mtx, dist, None, mtx)\n",
     "# cv2.imwrite('test_undist.jpg', dst)\n",
     "\n",
     "# Visualize undistortion\n",
-    "plot_row2(img, dst, 'Original Image', 'Undistorted Image')"
+    "#plot_row2(img, dst, 'Original Image', 'Undistorted Image')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -493,8 +504,8 @@
     "# STEP 2: COLOR / GRADIENT THRESHOLD\n",
     "######################################################\n",
     "# Load original image from camera\n",
-    "image = mpimg.imread('test_images/test2.jpg')\n",
-    "#image = mpimg.imread('test_images/straight_lines2.jpg')\n",
+    "image = mpimg.imread('test_images/test1.jpg')\n",
+    "#image = mpimg.imread('test_images/straight_lines1.jpg')\n",
     "# Undistort image\n",
     "undist_image = cv2.undistort(image, mtx, dist, None, mtx)\n",
     "\n",
@@ -517,7 +528,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -525,28 +538,31 @@
     "# STEP 3: PERSPECTIVE TRANSFORM\n",
     "######################################################\n",
     "# Plot borders (for experiments)\n",
-    "#plt.imshow(image)\n",
-    "#plt.plot((200, 560), (image.shape[0], 470), 'k-', color='red', linewidth=1)\n",
-    "#plt.plot((720, 1115), (470, image.shape[0]), 'k-', color='red', linewidth=1)\n",
+    "#pts = np.array([[180, img.shape[0]], [575, 460], [705, 460], [1150, img.shape[0]]], np.int32)\n",
+    "#pts = pts.reshape((-1,1,2))\n",
+    "#cv2.polylines(image, [pts], True, (0,255,255), 1)\n",
+    "#img_tr = perspective_transform(image)\n",
+    "#plot_row2(image, img_tr, 'Undistorted image', 'Warped image')\n",
+    "\n",
     "warped_img = perspective_transform(combined_binary)\n",
     "#plot_row2(combined_binary, warped_img, 'Combined binary image', 'Warped image')\n",
     "\n",
     "# Define image mask (polygon of interest)\n",
     "imshape = warped_img.shape\n",
-    "vertices = np.array([[(170, imshape[0]), \n",
-    "                      (170, 0), \n",
-    "                      (imshape[1] - 170, 0), \n",
-    "                      (imshape[1]-170, imshape[0])]], dtype=np.int32)\n",
+    "vertices = np.array([[(180, imshape[0]), (180, 0), (imshape[1] - 180, 0), \n",
+    "                      (imshape[1]-180, imshape[0])]], dtype=np.int32)\n",
     "masked_img = region_of_interest(warped_img, vertices)\n",
     "\n",
-    "plot_row2(warped_img, masked_img, 'Warped image', 'Warped image with mask')"
+    "#plot_row2(warped_img, masked_img, 'Warped image', 'Warped image with mask')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -554,36 +570,33 @@
     "# STEP 4: DETECT LANE LINES\n",
     "######################################################\n",
     "\n",
-    "# Take a histogram of the bottom half of the image\n",
+    "# Take a histogram of the bottom half of the masked image\n",
     "histogram = np.sum(masked_img[masked_img.shape[0]//2:,:], axis=0)\n",
     "#plt.plot(histogram)\n",
+    "\n",
     "# Create an output image to draw on and  visualize the result\n",
     "out_img = np.dstack((masked_img, masked_img, masked_img))*255\n",
-    "\n",
     "# Find the peak of the left and right halves of the histogram\n",
     "# These will be the starting point for the left and right lines\n",
     "midpoint = np.int(histogram.shape[0]/2)\n",
     "leftx_base = np.argmax(histogram[:midpoint])\n",
     "rightx_base = np.argmax(histogram[midpoint:]) + midpoint\n",
     "\n",
-    "# The number of sliding windows\n",
+    "# Number of sliding windows\n",
     "nwindows = 9\n",
-    "# Set height of windows\n",
+    "# Height of windows\n",
     "window_height = np.int(masked_img.shape[0]/nwindows)\n",
     "# Identify the x and y positions of all nonzero pixels in the image\n",
     "nonzero = masked_img.nonzero()\n",
     "nonzeroy = np.array(nonzero[0])\n",
     "nonzerox = np.array(nonzero[1])\n",
-    "\n",
     "# Current positions to be updated for each window\n",
     "leftx_current = leftx_base\n",
     "rightx_current = rightx_base\n",
-    "\n",
     "# Set the width of the windows +/- margin\n",
     "margin = 100\n",
     "# Set minimum number of pixels found to recenter window\n",
     "minpix = 50\n",
-    "\n",
     "# Create empty lists to receive left and right lane pixel indices\n",
     "left_lane_inds = []\n",
     "right_lane_inds = []\n",
@@ -591,33 +604,29 @@
     "# Step through the windows one by one\n",
     "for window in range(nwindows):\n",
     "    # Identify window boundaries in x and y (and right and left)\n",
-    "    win_y_low = masked_img.shape[0] - (window+1)*window_height\n",
-    "    win_y_high = masked_img.shape[0] - window*window_height\n",
+    "    win_y_low = masked_img.shape[0] - (window + 1) * window_height\n",
+    "    win_y_high = masked_img.shape[0] - window * window_height\n",
     "    win_xleft_low = leftx_current - margin\n",
     "    win_xleft_high = leftx_current + margin\n",
     "    win_xright_low = rightx_current - margin\n",
     "    win_xright_high = rightx_current + margin\n",
-    "    \n",
     "    # Draw the windows on the visualization image\n",
-    "    cv2.rectangle(out_img, (win_xleft_low,win_y_low), (win_xleft_high,win_y_high), (0,255,0), 2) \n",
-    "    cv2.rectangle(out_img, (win_xright_low,win_y_low), (win_xright_high,win_y_high), (0,255,0), 2)\n",
-    "    \n",
-    "     # Identify the nonzero pixels in x and y within the window\n",
+    "    cv2.rectangle(out_img, (win_xleft_low, win_y_low), (win_xleft_high, win_y_high), (0,255,0), 5) \n",
+    "    cv2.rectangle(out_img, (win_xright_low, win_y_low), (win_xright_high, win_y_high), (0,255,0), 5) \n",
+    "    # Identify the nonzero pixels in x and y within the window\n",
     "    good_left_inds = ((nonzeroy >= win_y_low) & (nonzeroy < win_y_high) & \n",
     "                      (nonzerox >= win_xleft_low) & (nonzerox < win_xleft_high)).nonzero()[0]\n",
     "    good_right_inds = ((nonzeroy >= win_y_low) & (nonzeroy < win_y_high) & \n",
     "                       (nonzerox >= win_xright_low) & (nonzerox < win_xright_high)).nonzero()[0]\n",
-    "    \n",
     "    # Append these indices to the lists\n",
     "    left_lane_inds.append(good_left_inds)\n",
     "    right_lane_inds.append(good_right_inds)\n",
-    "    \n",
-    "    # If founded > minpix pixels, recenter next window on their mean position\n",
+    "    # If you found > minpix pixels, recenter next window on their mean position\n",
     "    if len(good_left_inds) > minpix:\n",
     "        leftx_current = np.int(np.mean(nonzerox[good_left_inds]))\n",
     "    if len(good_right_inds) > minpix:        \n",
     "        rightx_current = np.int(np.mean(nonzerox[good_right_inds]))\n",
-    "        \n",
+    "\n",
     "# Concatenate the arrays of indices\n",
     "left_lane_inds = np.concatenate(left_lane_inds)\n",
     "right_lane_inds = np.concatenate(right_lane_inds)\n",
@@ -632,20 +641,150 @@
     "left_fit = np.polyfit(lefty, leftx, 2)\n",
     "right_fit = np.polyfit(righty, rightx, 2)\n",
     "\n",
-    "\n",
     "# Generate x and y values for plotting\n",
-    "ploty = np.linspace(0, masked_img.shape[0]-1, masked_img.shape[0])\n",
-    "left_fitx = left_fit[0]*ploty**2 + left_fit[1]*ploty + left_fit[2]\n",
-    "right_fitx = right_fit[0]*ploty**2 + right_fit[1]*ploty + right_fit[2]\n",
+    "ploty = np.linspace(0, masked_img.shape[0] - 1, masked_img.shape[0] )\n",
+    "left_fitx = left_fit[0] * ploty**2 + left_fit[1] * ploty + left_fit[2]\n",
+    "right_fitx = right_fit[0] * ploty**2 + right_fit[1] * ploty + right_fit[2]\n",
     "\n",
     "out_img[nonzeroy[left_lane_inds], nonzerox[left_lane_inds]] = [255, 0, 0]\n",
     "out_img[nonzeroy[right_lane_inds], nonzerox[right_lane_inds]] = [0, 0, 255]\n",
-    "fig = plt.figure(figsize=(18, 6))\n",
-    "plt.imshow(out_img)\n",
-    "plt.plot(left_fitx, ploty, color='yellow')\n",
-    "plt.plot(right_fitx, ploty, color='yellow')\n",
+    "#fig = plt.figure(figsize=(18, 6))\n",
+    "#plt.imshow(out_img)\n",
+    "#plt.plot(left_fitx, ploty, color='yellow')\n",
+    "#plt.plot(right_fitx, ploty, color='yellow')\n",
+    "#plt.xlim(0, 1280)\n",
+    "#plt.ylim(720, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "######################################################\n",
+    "# STEP 5: MEASURE RADIUS OF CURVATURE\n",
+    "######################################################\n",
+    "\n",
+    "# Plot up the data\n",
+    "mark_size = 0.05\n",
+    "plt.plot(leftx, lefty, 'o', color='red', markersize=mark_size)\n",
+    "plt.plot(rightx, righty, 'o', color='blue', markersize=mark_size)\n",
     "plt.xlim(0, 1280)\n",
-    "plt.ylim(720, 0)"
+    "plt.ylim(0, 720)\n",
+    "plt.plot(left_fitx, ploty, color='green', linewidth=3)\n",
+    "plt.plot(right_fitx, ploty, color='green', linewidth=3)\n",
+    "plt.gca().invert_yaxis()                # to visualize as we do the images\n",
+    "\n",
+    "# Define y-value where we want radius of curvature\n",
+    "# I'll choose the maximum y-value, corresponding to the bottom of the image\n",
+    "y_eval = np.max(ploty)\n",
+    "left_curverad = ((1 + (2 * left_fit[0] * y_eval + left_fit[1])**2)**1.5) / np.absolute(2 * left_fit[0])\n",
+    "right_curverad = ((1 + (2 * right_fit[0] * y_eval + right_fit[1])**2)**1.5) / np.absolute(2 * right_fit[0])\n",
+    "curverad = (left_curverad + right_curverad)/2\n",
+    "#print('Left: {}, Right: {}, AVG: {}'.format(left_curverad, right_curverad, curverad))\n",
+    "\n",
+    "# Define conversions in x and y from pixels space to meters\n",
+    "ym_per_pix = 30/720   # meters per pixel in y dimension\n",
+    "xm_per_pix = 3.7/700  # meters per pixel in x dimension\n",
+    "\n",
+    "# Fit a second order polynomial to each\n",
+    "left_fit_cr = np.polyfit(lefty * ym_per_pix, leftx * xm_per_pix, 2)\n",
+    "right_fit_cr = np.polyfit(righty * ym_per_pix, rightx * xm_per_pix, 2)\n",
+    "\n",
+    "# Fit new polynomials to x,y in world space\n",
+    "#left_fit_cr = np.polyfit(ploty * ym_per_pix, leftx * xm_per_pix, 2)\n",
+    "#right_fit_cr = np.polyfit(ploty * ym_per_pix, rightx * xm_per_pix, 2)\n",
+    "# Calculate the new radii of curvature\n",
+    "left_curverad = ((1 + (2 * left_fit_cr[0] * y_eval * ym_per_pix + \n",
+    "                       left_fit_cr[1])**2)**1.5) / np.absolute(2 * left_fit_cr[0])\n",
+    "right_curverad = ((1 + (2 * right_fit_cr[0] * y_eval * ym_per_pix + \n",
+    "                        right_fit_cr[1])**2)**1.5) / np.absolute(2 * right_fit_cr[0])\n",
+    "curverad = (left_curverad + right_curverad)/2\n",
+    "# Now our radius of curvature is in meters\n",
+    "#print('Left: {} m, Right: {} m, AVG: {} m'.format(left_curverad, right_curverad, curverad))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "######################################################\n",
+    "# STEP 6: VEHICLE OFFSET FROM LANE CENTER\n",
+    "######################################################\n",
+    "# Calculate x bottom position for y for left lane\n",
+    "left_lane_bottom = (left_fit_cr[0] * (y_eval * ym_per_pix) ** 2 + \n",
+    "                    left_fit_cr[1] * (y_eval * ym_per_pix) + left_fit_cr[2])\n",
+    "# Calculate x bottom position for y for right lane                   \n",
+    "right_lane_bottom = (right_fit_cr[0] * (y_eval * ym_per_pix) ** 2 + \n",
+    "                     right_fit_cr[1] * (y_eval * ym_per_pix) + right_fit_cr[2])\n",
+    "\n",
+    "# Calculate the mid point of the lane\n",
+    "lane_midpoint = float(right_lane_bottom + left_lane_bottom) / 2\n",
+    "# Calculate the image center in meters from left edge of the image\n",
+    "image_mid_point_in_meter = masked_img.shape[1]/2 * xm_per_pix\n",
+    "# Positive value indicates vehicle on the right side of lane center, else on the left.\n",
+    "lane_deviation = (image_mid_point_in_meter - lane_midpoint)\n",
+    "\n",
+    "print ('left_lane_bottom = {:.3f}'.format(left_lane_bottom))\n",
+    "print ('right_lane_bottom = {:.3f}'.format(right_lane_bottom))\n",
+    "print ('lane_midpoint = {:.3f}'.format(lane_midpoint))\n",
+    "print ('image_mid_point_in_meter = {:.3f}'.format(image_mid_point_in_meter))\n",
+    "print ('lane_deviation = {:.3f}'.format(lane_deviation))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "######################################################\n",
+    "# STEP 7: DRAWING\n",
+    "######################################################\n",
+    "# Create an image to draw the lines on\n",
+    "warp_zero = np.zeros_like(masked_img).astype(np.uint8)\n",
+    "color_warp = np.dstack((masked_img, masked_img, masked_img))\n",
+    "\n",
+    "# Recast the x and y points into usable format for cv2.fillPoly()\n",
+    "pts_left = np.array([np.transpose(np.vstack([left_fitx, ploty]))])\n",
+    "pts_right = np.array([np.flipud(np.transpose(np.vstack([right_fitx, ploty])))])\n",
+    "pts = np.hstack((pts_left, pts_right))\n",
+    "\n",
+    "# Draw the lane onto the warped blank image\n",
+    "cv2.fillPoly(color_warp, np.int_([pts]), (0,255, 0))\n",
+    "# Warp the blank back to original image space using inverse perspective matrix (Minv)\n",
+    "newwarp = perspective_transform(color_warp, inv=True)\n",
+    "# Combine the result with the original image\n",
+    "result = cv2.addWeighted(undist_image, 1, newwarp, 0.3, 0)\n",
+    "\n",
+    "x_offset = result.shape[1] - 360 - 30\n",
+    "y_offset = 30\n",
+    "thumb = cv2.resize(out_img, (360, 220), interpolation = cv2.INTER_CUBIC)\n",
+    "result[y_offset:y_offset + thumb.shape[0], x_offset:x_offset + thumb.shape[1]] = thumb\n",
+    "\n",
+    "\n",
+    "\n",
+    "font = cv2.FONT_HERSHEY_SIMPLEX\n",
+    "curv_label = 'Radius of Curvature: {:.0f} m.'.format(curverad)\n",
+    "deviation_label = 'Vehicle Deviation: {:.3f} m.'.format(lane_deviation)\n",
+    "\n",
+    "cv2.putText(result, curv_label, (30, 60), font, 1, (255,255,255), 2)\n",
+    "cv2.putText(result, deviation_label, (30, 110), font, 1, (255,255,255), 2)\n",
+    "\n",
+    "#plot_row2(undist_image, result, 'Original Frame (Undistorted)', 'Processed Frame')\n",
+    "fig = plt.figure(figsize=(20, 10))\n",
+    "plt.imshow(result)\n"
    ]
   },
   {
@@ -662,6 +801,17 @@
    "execution_count": null,
    "metadata": {
     "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
