--- a/CarND-Advanced-Lane-Lines.ipynb
+++ b/CarND-Advanced-Lane-Lines.ipynb
@@ -288,9 +288,9 @@
     "    combined[((grad_x_binary == 1) & (grad_y_binary == 1)) | ((mag_binary == 1) & (dir_binary == 1))] = 1\n",
     "    \n",
     "    if do_plot:\n",
-    "        plot_row2(image, grad_x_binary,      'Original Image', 'Sobel on x-axis')\n",
+    "        plot_row2(image, grad_x_binary,      'Original Image (Undistorted)', 'Sobel on x-axis')\n",
     "        plot_row2(grad_y_binary, mag_binary, 'Sobel on y-axis', 'Thresholded Magnitude')\n",
-    "        plot_row2(dir_binary, combined,      'Original Image', 'Combined Thresholds')\n",
+    "        plot_row2(dir_binary, combined,      'Direction of gradient', 'Combined Thresholds')\n",
     "    return combined"
    ]
   },
@@ -322,7 +322,7 @@
     "    #combined = np.zeros_like(l_binary)\n",
     "    #combined[((s_binary == 1) & (l_binary == 1))] = 1\n",
     "    if do_plot:\n",
-    "        plot_row2(image, s_binary, 'Original Image', 'S threshold')\n",
+    "        plot_row2(image, s_binary, 'Original Image (Undistorted)', 'HLS(S-channel) threshold')\n",
     "    #    plot_row2(image, l_binary, 'Original Image', 'L threshold')\n",
     "    #    plot_row2(image, combined, 'Original Image', 'S and L threshold')\n",
     "    #return combined\n",
@@ -441,6 +441,7 @@
     "def get_undist():\n",
     "    # Test undistortion on the image\n",
     "    img = cv2.imread('camera_cal/calibration1.jpg')\n",
+    "    #img = mpimg.imread('test_images/test1.jpg')\n",
     "    # Calibrate camera and save data to pickle\n",
     "    #mtx, dist = calibrate_camera(img)\n",
     "    # Load calibration data from pickle\n",
@@ -448,7 +449,7 @@
     "    # Undistort image\n",
     "    dst = cv2.undistort(img, mtx, dist, None, mtx)\n",
     "    # Visualize undistortion\n",
-    "    # plot_row2(img, dst, 'Original Image', 'Undistorted Image')\n",
+    "    #plot_row2(img, dst, 'Original Image', 'Undistorted Image')\n",
     "    return mtx, dist"
    ]
   },
@@ -495,14 +496,14 @@
     "# PERSPECTIVE TRANSFORM\n",
     "def warp(thresholded):\n",
     "    # Plot borders (for experiments)\n",
+    "    #img = mpimg.imread('test_images/straight_lines1.jpg')\n",
     "    #pts = np.array([[180, img.shape[0]], [575, 460], [705, 460], [1150, img.shape[0]]], np.int32)\n",
     "    #pts = pts.reshape((-1,1,2))\n",
-    "    #cv2.polylines(image, [pts], True, (0,255,255), 1)\n",
-    "    #img_tr = perspective_transform(image)\n",
-    "    #plot_row2(image, img_tr, 'Undistorted image', 'Warped image')\n",
-    "\n",
+    "    #cv2.polylines(img, [pts], True, (0,255,255), 1)\n",
+    "    #img_tr = perspective_transform(img)\n",
+    "    #plot_row2(img, img_tr, 'Undistorted image', 'Warped image')\n",
     "    warped_img = perspective_transform(thresholded)\n",
-    "    #plot_row2(combined_binary, warped_img, 'Combined binary image', 'Warped image')\n",
+    "    #plot_row2(thresholded, warped_img, 'Combined binary image', 'Warped image')\n",
     "    # Define image mask (polygon of interest)\n",
     "    imshape = warped_img.shape\n",
     "    vertices = np.array([[(200, imshape[0]), (200, 0), (imshape[1] - 200, 0), \n",
@@ -564,7 +565,7 @@
     "    left_lane_inds = []\n",
     "    right_lane_inds = []\n",
     "    \n",
-    "    # Sliding window\n",
+    "    # Sliding windows\n",
     "    if (left_line.detected == False) or (right_line.detected == False) :\n",
     "        # Step through the windows one by one\n",
     "        for window in range(nwindows):\n",
@@ -641,11 +642,9 @@
     "    # Sanity check:\n",
     "    # INIT\n",
     "    if (left_line.current_fit[0] == False):\n",
-    "        print(\"INIT FITS\")\n",
     "        left_line.current_fit = left_fit\n",
     "        right_line.current_fit = right_fit\n",
     "    \n",
-    "    #if ((abs(left_line.current_fit[2] - left_fit[2]) > 200) or (abs(left_line.current_fit[1] - left_fit[1]) > 0.18)):\n",
     "    if (abs(left_line.current_fit[1] - left_fit[1]) > 0.18):\n",
     "        #print('FOR_UPD_DIFF_LEFT_C2 = {}'.format(abs(left_line.current_fit[1] - left_fit[1])))\n",
     "        #print('FOR_UPD_DIFF_LEFT_C3 = {}'.format(abs(left_line.current_fit[2] - left_fit[2])))\n",
@@ -668,7 +667,6 @@
     "            avg = avg + element\n",
     "        left_line.best_fit = avg / (len(left_line.recent_xfitted))\n",
     "        \n",
-    "    #if ((abs(right_line.current_fit[2] - right_fit[2]) > 200) or (abs(right_line.current_fit[1] - right_fit[1]) > 0.18)):\n",
     "    if (abs(right_line.current_fit[1] - right_fit[1]) > 0.18):\n",
     "        #print('FOR_UPD_DIFF_RIGHT_C2 = {}'.format(abs(right_line.current_fit[1] - right_fit[1])))\n",
     "        #print('FOR_UPD_DIFF_RIGHT_C3 = {}'.format(abs(right_line.current_fit[2] - right_fit[2])))\n",
